@@ -21,7 +21,8 @@ items:
     call_to_action_link: /page-2/
   - title: Example callout 3
     subtitle: Example subtitle 3
-    icon: fab fa-github
+    icon: fa-github
+    icon_brand: true
     description: >
       The example description text goes here and can be multiple lines.
 
