@@ -8,4 +8,5 @@ items:
     icon: fa-mail-bulk
   - title: Works with GitHub Pages
     subtitle: Quick and easy to get started
-    icon: fab fa-github
+    icon: fa-github
+    icon_brand: true
