@@ -33,7 +33,7 @@ Create a data file following the below format. The style is for classes to set t
 
 **New in 0.5.7** You can set the height of the callouts in the data file, such as is-small, is-medium or is-large. If unset it will be is-medium by default.
 
-The items have 5 fields, but only the title and subtitle are required. 
+The items have 6 fields, but only the title and subtitle are required. If the icon is a brand icon, such as GitHub in the below example, set `icon_brand: true`.
 
 ```yaml
 style: is-light
@@ -59,7 +59,8 @@ items:
     call_to_action_link: /page-2/
   - title: Example callout 3
     subtitle: Example subtitle 3
-    icon: fab fa-github
+    icon: fa-github
+    icon_brand: true
     description: >
       The example description text goes here and can be multiple lines.
 
