@@ -2,6 +2,7 @@
 * Add social share buttons
 * Update Bulma to 0.8.2
 * Update font awesome
+* Add icon_brand option to callouts
 
 # 0.7.2
 * Fix for Pagination - pull request #44 from donkirkby
